--- a/templates/index.html
+++ b/templates/index.html
@@ -110,12 +110,17 @@ button:hover {
     <div class="message bot-message">Hello! I can analyze your state of well being both emotionally and phycially based on what you type. How can I help you deal with these emotions?</div>
     <p>Use this as an emotional conselor and health assistant, <b>NOT</b> your school counselor or your homework director.</p>
   </div>
+   <h1>
+      PAY HERE:
+   </h1>
+   <a href="https://venmo.com/SakritUser123?txn=pay&amount=3&note=Payment" target="_blank">
 
       <!-- Form for user input -->
       <form method="POST" action="/">
          <input type="text" id="user-input" name="user_input" placeholder="How do you feel..." required>
          <button type="submit">➡️</button>
       </form>
+   
       
         
       
